--- a/assets/scss/components/components-dir.scss
+++ b/assets/scss/components/components-dir.scss
@@ -3,3 +3,6 @@
 @import "modal.scss";
 @import "badge.scss";
 @import "provider-card.scss";
+@import "file-details.scss";
+@import "loader.scss";
+@import "attachment-modal.scss";
