--- a/assets/scss/base/button.scss
+++ b/assets/scss/base/button.scss
@@ -34,5 +34,17 @@ button, .btn {
     .material-symbols-outlined {
       font-size: 15px;
     }
+    &.more-btn {
+      padding: 8px;
+      .material-symbols-outlined {
+        font-size: 30px;
+      }
+    }
+    &.more-btn-cta {
+      .material-symbols-outlined {
+        display: inline-block;
+        margin-bottom: -6px;
+      }
+    }
   }
 }
