change: reply, header change

--- a/assets/scss/base/colors.scss
+++ b/assets/scss/base/colors.scss
@@ -10,14 +10,28 @@
   --white: #fff;
   --grey: #666;
   --grey-dark: #404040;
+  --grey-darkest: #272727;
   --grey-light: #c4c8c7;
   --grey-lightest: #eef1f2;
   --danger: #cd1717;
+  --border-color: #dadce0;
 }
 
 .text-primary {
   color: var(--primary);
 }
+.text-dark {
+  color: var(--grey-dark);
+}
+.text-darkest {
+  color: var(--grey-darkest);
+}
 .bg-primary {
   background-color: var(--primary);
+}
+.text-light {
+  color: var(--grey-light);
+}
+.text-white {
+  color: var(--white);
 }
