--- a/assets/scss/base/visibility.scss
+++ b/assets/scss/base/visibility.scss
@@ -82,3 +82,54 @@
 .relative {
   position: relative;
 }
+
+.show-on-hover-parent {
+  @media (min-width: $screen-lg-min) {
+    &:hover {
+      .show-on-hover-child {
+        display: block;
+      }
+    }
+  }
+  @media (max-width: $screen-sm-max) {
+    &.hold {
+      .show-on-hover-child {
+        display: block;
+      }
+    }
+  }
+  .show-on-hover-child {
+    display: none;
+  }
+}
+
+.show-on-hold-parent {
+  &.hold {
+    .show-on-hover-child {
+      display: block;
+    }
+  }
+
+  .show-on-hover-child {
+    display: none;
+  }
+}
+
+.hoverable {
+  cursor: pointer;
+}
+
+.truncated {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.disabled {
+  opacity: .5 !important;
+  pointer-events: none !important;
+  &:hover {
+    cursor: none !important;
+    color: initial !important;
+  }
+}
