--- a/assets/scss/components/message.scss
+++ b/assets/scss/components/message.scss
@@ -1,3 +1,4 @@
+
 .message-container {
   padding-bottom: 10px;
   display: flex;
@@ -38,6 +39,10 @@
       cursor: pointer;
       .material-symbols-outlined {
         font-size: 20px;
+      }
+
+      @media (max-width: $screen-sm-max) {
+        width: auto;
       }
     }
   }
