change: safri fix

--- a/assets/scss/components/message.scss
+++ b/assets/scss/components/message.scss
@@ -1,12 +1,16 @@
 
 .message-container {
-  padding-bottom: 10px;
+  padding: 5px 32px 5px 12px;
   display: flex;
   flex-wrap: nowrap;
   gap: 8px;
   width: 100%;
   color: #272727;
   position: relative;
+  border-radius: 0px !important;
+  @media(max-width: $screen-sm-max) {
+    padding: 5px 24px 5px 6px;
+  }
   .message-avatar {
     width: 40px;
     height: 40px;
@@ -17,6 +21,11 @@
     background-repeat: no-repeat;
     background-position: center;
     flex-shrink: 0;
+    @media(max-width: $screen-sm-max) {
+      width: 35px;
+      height: 35px;
+      background-size: 50px 50px;
+    }
   }
   .message-text {
     white-space: pre-line;
@@ -26,7 +35,7 @@
     margin-top: 5px;
     margin-right: auto;
     margin-left: initial;
-    max-width: 80%;
+    max-width: 90%;
     font-size: 14px;
     position: relative;
     .reply-to-details {
